// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Render default - value[0] 1`] = `
.emotion-0 {
  margin-bottom: 10px;
}

<div>
  <div
    class="skeleton emotion-0"
    style="width: 30%; height: 20px;"
  />
  <div
    class="skeleton emotion-1"
    style="width: 100%; height: 32px;"
  />
</div>
`;

exports[`Render inputHeight80 - value[0] 1`] = `
.emotion-0 {
  margin-bottom: 10px;
}

<div>
  <div
    class="skeleton emotion-0"
    style="width: 30%; height: 20px;"
  />
  <div
    class="skeleton emotion-1"
    style="width: 100%; height: 80px;"
  />
</div>
`;

exports[`Render labelHeight40 - value[0] 1`] = `
.emotion-0 {
  margin-bottom: 10px;
}

<div>
  <div
    class="skeleton emotion-0"
    style="width: 30%; height: 40px;"
  />
  <div
    class="skeleton emotion-1"
    style="width: 100%; height: 32px;"
  />
</div>
`;

exports[`Render labelWidth80 - value[0] 1`] = `
.emotion-0 {
  margin-bottom: 10px;
}

<div>
  <div
    class="skeleton emotion-0"
    style="width: 80px; height: 20px;"
  />
  <div
    class="skeleton emotion-1"
    style="width: 100%; height: 32px;"
  />
</div>
`;

exports[`Render labelfalse - value[0] 1`] = `
<div>
  <div
    class="skeleton emotion-0"
    style="width: 100%; height: 32px;"
  />
</div>
`;

exports[`Render required = true default - value[0] 1`] = `
.emotion-0 {
  margin-bottom: 10px;
}

<div>
  <div
    class="skeleton emotion-0"
    style="width: 30%; height: 20px;"
  />
  <div
    class="skeleton emotion-1"
    style="width: 100%; height: 32px;"
  />
</div>
`;

exports[`Render required = true inputHeight80 - value[0] 1`] = `
.emotion-0 {
  margin-bottom: 10px;
}

<div>
  <div
    class="skeleton emotion-0"
    style="width: 30%; height: 20px;"
  />
  <div
    class="skeleton emotion-1"
    style="width: 100%; height: 80px;"
  />
</div>
`;

exports[`Render required = true labelHeight40 - value[0] 1`] = `
.emotion-0 {
  margin-bottom: 10px;
}

<div>
  <div
    class="skeleton emotion-0"
    style="width: 30%; height: 40px;"
  />
  <div
    class="skeleton emotion-1"
    style="width: 100%; height: 32px;"
  />
</div>
`;

exports[`Render required = true labelWidth80 - value[0] 1`] = `
.emotion-0 {
  margin-bottom: 10px;
}

<div>
  <div
    class="skeleton emotion-0"
    style="width: 80px; height: 20px;"
  />
  <div
    class="skeleton emotion-1"
    style="width: 100%; height: 32px;"
  />
</div>
`;

exports[`Render required = true labelfalse - value[0] 1`] = `
<div>
  <div
    class="skeleton emotion-0"
    style="width: 100%; height: 32px;"
  />
</div>
`;

exports[`Render required = true sizedefault - value[0] 1`] = `
.emotion-0 {
  margin-bottom: 10px;
}

<div>
  <div
    class="skeleton emotion-0"
    style="width: 30%; height: 20px;"
  />
  <div
    class="skeleton emotion-1"
    style="width: 100%; height: 32px;"
  />
</div>
`;

exports[`Render required = true sizelarge - value[0] 1`] = `
.emotion-0 {
  margin-bottom: 10px;
}

<div>
  <div
    class="skeleton emotion-0"
    style="width: 30%; height: 20px;"
  />
  <div
    class="skeleton emotion-1"
    style="width: 100%; height: 40px;"
  />
</div>
`;

exports[`Render required = true sizesmall - value[0] 1`] = `
.emotion-0 {
  margin-bottom: 10px;
}

<div>
  <div
    class="skeleton emotion-0"
    style="width: 30%; height: 20px;"
  />
  <div
    class="skeleton emotion-1"
    style="width: 100%; height: 24px;"
  />
</div>
`;

exports[`Render sizedefault - value[0] 1`] = `
.emotion-0 {
  margin-bottom: 10px;
}

<div>
  <div
    class="skeleton emotion-0"
    style="width: 30%; height: 20px;"
  />
  <div
    class="skeleton emotion-1"
    style="width: 100%; height: 32px;"
  />
</div>
`;

exports[`Render sizelarge - value[0] 1`] = `
.emotion-0 {
  margin-bottom: 10px;
}

<div>
  <div
    class="skeleton emotion-0"
    style="width: 30%; height: 20px;"
  />
  <div
    class="skeleton emotion-1"
    style="width: 100%; height: 40px;"
  />
</div>
`;

exports[`Render sizesmall - value[0] 1`] = `
.emotion-0 {
  margin-bottom: 10px;
}

<div>
  <div
    class="skeleton emotion-0"
    style="width: 30%; height: 20px;"
  />
  <div
    class="skeleton emotion-1"
    style="width: 100%; height: 24px;"
  />
</div>
`;

exports[`Test Schema default 1`] = `true`;

exports[`Test Schema default 2`] = `null`;

exports[`Test Schema inputHeight80 1`] = `true`;

exports[`Test Schema inputHeight80 2`] = `null`;

exports[`Test Schema labelHeight40 1`] = `true`;

exports[`Test Schema labelHeight40 2`] = `null`;

exports[`Test Schema labelWidth80 1`] = `true`;

exports[`Test Schema labelWidth80 2`] = `null`;

exports[`Test Schema labelfalse 1`] = `true`;

exports[`Test Schema labelfalse 2`] = `null`;

exports[`Test Schema sizedefault 1`] = `true`;

exports[`Test Schema sizedefault 2`] = `null`;

exports[`Test Schema sizelarge 1`] = `true`;

exports[`Test Schema sizelarge 2`] = `null`;

exports[`Test Schema sizesmall 1`] = `true`;

exports[`Test Schema sizesmall 2`] = `null`;
